@@ -18,6 +18,12 @@
     this driver any more) you will find a patch and an already fixed
     version.&lt;p&gt;
 
+    This Foomatic entry gives access to all options which the Windows
+    driver provides for Samsung&apos;s GDI printers. As this was not
+    forseen by the original GhostScript driver from Samsung, a hack
+    was applied in this Foomatic entry. The driver does not need to be
+    patched for that.&lt;p&gt;
+
     If you are using MagicFilter 1.2, you can use &lt;a
     href=&quot;http://www.linuxprinting.org/download/printing/samsung-gdi/gdi-filter.gz&quot;&gt;this
     filter&lt;/a&gt; with the driver (developed on Debian Potato,
