@@ -1,11 +1,11 @@
-<option type="enum" id="opt/gdi-Reprint">
+<option type="enum" id="opt/gdi-AllowReprint">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
-   <en>Reprint</en>
+   <en>Allow use of &apos;Reprint&apos; button</en>
   </arg_longname>
   <arg_shortname>
-   <en>Reprint</en><!-- backends only know <en> shortnames! -->
+   <en>AllowReprint</en><!-- backends only know <en> shortnames! -->
   </arg_shortname>
   <arg_execution>
    <arg_group>Miscellaneous</arg_group>
@@ -17,31 +17,31 @@
   <constraints>
      <constraint sense="true">
       <driver>gdi</driver>
-      <arg_defval>ev/gdi-Reprint-On</arg_defval>
+      <arg_defval>ev/gdi-AllowReprint-Yes</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
-   <enum_val id="ev/gdi-Reprint-On">
+   <enum_val id="ev/gdi-AllowReprint-Yes">
     <ev_longname>
-     <en>On</en>
+     <en>Yes</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>On</en>
+     <en>Yes</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
     <ev_driverval>ON</ev_driverval>
    </enum_val>
-   <enum_val id="ev/gdi-Reprint-Off">
+   <enum_val id="ev/gdi-AllowReprint-No">
     <ev_longname>
-     <en>Off</en>
+     <en>No</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>Off</en>
+     <en>No</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
