@@ -17,18 +17,18 @@
   <constraints>
      <constraint sense="true">
       <driver>gdi</driver>
-      <arg_defval>ev/gdi-Altitude-On</arg_defval>
+      <arg_defval>ev/gdi-Altitude-Low</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
    <enum_val id="ev/gdi-Altitude-On">
     <ev_longname>
-     <en>On</en>
+     <en>High Altitude (Low Air Pressure)</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>On</en>
+     <en>High</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
@@ -36,12 +36,12 @@
    </enum_val>
    <enum_val id="ev/gdi-Altitude-Off">
     <ev_longname>
-     <en>Off</en>
+     <en>Low Altitude (High Air Pressure)</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>Off</en>
+     <en>Low</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
