@@ -2,7 +2,7 @@
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
-   <en>Jam Recovery</en>
+   <en>Reprint Page after Paper Jam</en>
   </arg_longname>
   <arg_shortname>
    <en>JamRecovery</en><!-- backends only know <en> shortnames! -->
@@ -17,31 +17,31 @@
   <constraints>
      <constraint sense="true">
       <driver>gdi</driver>
-      <arg_defval>ev/gdi-JamRecovery-On</arg_defval>
+      <arg_defval>ev/gdi-JamRecovery-Yes</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
-   <enum_val id="ev/gdi-JamRecovery-On">
+   <enum_val id="ev/gdi-JamRecovery-Yes">
     <ev_longname>
-     <en>On</en>
+     <en>Yes</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>On</en>
+     <en>Yes</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
     <ev_driverval>ON</ev_driverval>
    </enum_val>
-   <enum_val id="ev/gdi-JamRecovery-Off">
+   <enum_val id="ev/gdi-JamRecovery-No">
     <ev_longname>
-     <en>Off</en>
+     <en>No</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>Off</en>
+     <en>No</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
