@@ -1,3 +1,11 @@
+2003-07-18  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* opt/gdi-Altitude.xml, opt/gdi-JamRecovery.xml,
+	  opt/gdi-Reprint.xml opt/gdi-AllowReprint.xml: Made option
+	  descriptions for the "gdi" driver more clear.
+
+	* driver/gdi.xml: Additional text.
+
 2003-07-17  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/gdi.xml, opt/2.xml, gdi-Altitude.xml, opt/gdi-Copies.xml,
